external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_complex_expression.move
module 0x42::M {
    fun foo() {
        (if (true) 5 else 0)();
        (while (false) {})(0, 1);
    }
}
